--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.meila.jasen.pxadapter.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboard|keyboardHidden">>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
